--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,13 +6,13 @@
 	"image": "mcr.microsoft.com/devcontainers/rust:1-1-bullseye",
 
 	// Use 'mounts' to make the cargo cache persistent in a Docker Volume.
-	"mounts": [
-		{
-			"source": "devcontainer_cargo_cache_${devcontainerId}",
-			"target": "/usr/local/cargo",
-			"type": "volume"
-		}
-	]
+	//"mounts": [
+		//{
+			//"source": "devcontainer_cargo_cache_${devcontainerId}",
+			//"target": "/usr/local/cargo",
+			//"type": "volume"
+		//}
+	//]
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
