--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,16 +3,7 @@
 {
 	"name": "Rust",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "mcr.microsoft.com/devcontainers/rust:1-1-bullseye",
-
-	// Use 'mounts' to make the cargo cache persistent in a Docker Volume.
-	//"mounts": [
-		//{
-			//"source": "devcontainer_cargo_cache_${devcontainerId}",
-			//"target": "/usr/local/cargo",
-			//"type": "volume"
-		//}
-	//]
+	"image": "mcr.microsoft.com/devcontainers/rust:1-1-bullseye"
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
